--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -9,3 +9,20 @@
     gap: 20px;
     margin: 80px 60px;
 }
+
+.proceed {
+    text-decoration: none;
+}
+
+.btn-proceed {
+    background: #FF9900;
+    width: 90%;
+    margin: 10px auto;
+    border-radius: 4px;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-weight: 400;
+    font-size: 18px;
+}
