--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -26,3 +26,12 @@
     font-weight: 400;
     font-size: 18px;
 }
+
+.pagination {
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.pagination .selected {
+    background-color: #FF9900;
+}
